@@ -55,6 +55,7 @@
   </ol>
   <li><a href="portfolios.html">Portfolios</a></li>
   <li><a href="printing.html">Printing</a></li>
+  <li><a href="dev.html">Using development versions and contributing</a></li>
 </ol>
 <p></p>
 <h3>Quote Plugin Reference</h3>
