@@ -27,11 +27,12 @@
 Candle::Candle ()
 {
   pluginName = "Candle";
-  minPixelspace = 6;
+  minPixelspace = 2;
   startX = 2;
   indicatorFlag = FALSE;
+  expandCandles = FALSE;
 
-  loadSettings();  
+  loadSettings();
 }
 
 Candle::~Candle ()
@@ -44,12 +45,18 @@ void Candle::drawChart (int startX, int startIndex, int pixelspace)
 {
   QPainter painter;
   painter.begin(buffer);
+  painter.setPen(color);
 
   int x = startX;
   int loop = startIndex;
-
-  painter.setPen(color);
-
+  
+  int w = (1 + pixelspace) / 2 - 1 ; // width of 1/2 candle
+  if (expandCandles)
+  {
+    if (pixelspace < 5) 
+      w = 1;
+  }
+  
   while ((x < buffer->width()) && (loop < (int) data->count()))
   {
     int h = scaler->convertToY(data->getHigh(loop));
@@ -61,7 +68,11 @@ void Candle::drawChart (int startX, int startIndex, int pixelspace)
     {
       if (c < o)
       {
-        painter.drawRect(x - 2, c, 5, o - c);
+        if (expandCandles)
+          painter.drawRect(x - w, c, 1+2*w, o - c);
+	else
+          painter.drawRect(x - 2, c, 5, o - c);
+	
         painter.drawLine (x, h, x, c);
         painter.drawLine (x, o, x, l);
       }
@@ -70,10 +81,20 @@ void Candle::drawChart (int startX, int startIndex, int pixelspace)
         painter.drawLine (x, h, x, l);
       
         if (c == o)
-          painter.drawLine (x - 2, o, x + 2, o);
+	{
+	  if (expandCandles)
+            painter.drawLine (x - w, o, x + w, o);
+	  else
+            painter.drawLine (x - 2, o, x + 2, o);
+	}
         else
-          painter.fillRect(x - 2, o, 5, c - o, painter.pen().color());
-      }
+	{
+	  if (expandCandles)
+            painter.fillRect(x - w, o, 1+2*w, c - o, painter.pen().color());
+	  else
+            painter.fillRect(x - 2, o, 5, c - o, painter.pen().color());
+	}
+       }
     }
 
     x = x + pixelspace;
@@ -89,11 +110,13 @@ void Candle::prefDialog ()
   dialog->setCaption(tr("Candle Chart Prefs"));
   dialog->createPage (tr("Colors"));
   dialog->addColorItem(tr("Candle Color"), 1, color);
+  dialog->addCheckItem(tr("Expand Candles"), 1, expandCandles);
   int rc = dialog->exec();
   
   if (rc == QDialog::Accepted)
   {
     color = dialog->getColor(tr("Candle Color"));
+    expandCandles = dialog->getCheck(tr("Expand Candles"));
     saveFlag = TRUE;
     emit draw();
   }
@@ -109,6 +132,9 @@ void Candle::loadSettings ()
   QString s = settings.readEntry("/Color", "green");
   color.setNamedColor(s);
   
+  s = settings.readEntry("/ExpandCandles", "0");
+  expandCandles = s.toInt();
+  
   settings.endGroup();
 }
 
@@ -117,6 +143,7 @@ void Candle::saveSettings ()
   QSettings settings;
   settings.beginGroup("/Qtstalker/Candle plugin");
   settings.writeEntry("/Color", color.name());
+  settings.writeEntry("/ExpandCandles", QString::number(expandCandles));
   settings.endGroup();
 }
 
