@@ -23,6 +23,7 @@
 #define TEXT_HPP
 
 #include "ChartObject.h"
+#include <qfont.h>
 
 class Text : public ChartObject
 {
@@ -41,6 +42,7 @@ class Text : public ChartObject
     
   protected:
     QString label;
+    QFont textFont;
 };
 
 #endif
